--- a/_config.yml
+++ b/_config.yml
@@ -111,6 +111,11 @@ include:
 # their entries' file path in the `include:` list.
 
 exclude:
+  - _includes/
+  - _site/
+  - Gemfile
+  - Gemfile.lock
+  - README.md
   - _notes/000 Inbox
   - _notes/200 Private
   - _notes/300 Templates
